Introdução As partes finais do portfólio

--- a/index.html
+++ b/index.html
@@ -174,8 +174,57 @@
             </div>
           </div>
         </article>
+        <!-- Fim skills -->
+        <article id="formacao">
+          <h2><i class="fa-solid fa-user-graduate"></i> Formação Acadêmica</h2>
+
+          <div id="formacao-conteiner">
+            <div class="curso">
+              <p class="periodo">2018 a 2020</p>
+              <h3 class="instituicao">
+                Escola Técnica Estadual Edson Mororó Moura
+              </h3>
+              <p class="titulacao">Técnico em Desenvolvimento de Sistemas</p>
+            </div>
+          </div>
+        </article>
+        <!-- Fim formação -->
+        <article id="projetos">
+          <h2>
+            <i class="fa-solid fa-trowel-bricks"></i> Projetos Desenvolvidos
+          </h2>
+          <div id="projeto-conteiner">
+            <div class="projeto">
+              <img src="imagens/projeto-03-android.jpg" alt="" class="foto" />
+              <div class="projeto-info">
+                <p class="periodo"></p>
+                <h3 class="titulo"></h3>
+                <p></p>
+                <details class="descricao">
+                  <summary>Saiba mais...</summary>
+                  <p>
+                    Projeto Android (Web) Site informativo com páginas HTML,
+                    design personalizado via CSS e organização modular. Inclui
+                    automação de deploy com GitHub Actions e foco em navegação
+                    simples e visual atrativo.
+                  </p>
+                </details>
+              </div>
+            </div>
+          </div>
+        </article>
+        <!-- Fim projetos -->
       </section>
     </menu>
+    <footer>
+      <p>
+        &copy; 2025
+        <a href="https://github.com/Anthony-Albuquerque405" target="_blank"
+          >Anthony Nascimento de Albuquerque</a
+        >
+        - Todos os direitos reservados.
+      </p>
+    </footer>
     <script src="script/script.js"></script>
   </body>
 </html>
