resposividade para telas maiores.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </ul>
       </nav>
     </header>
-    <menu>
+    <main>
       <section id="ficha">
         <img src="imagens/anthony.jpg" alt="EU" class="foto" />
         <h1>Anthony Nascimento de Albuquerque</h1>
@@ -219,7 +219,7 @@
         </article>
         <!-- Fim projetos -->
       </section>
-    </menu>
+    </main>
     <footer>
       <p>
         &copy; 2025
