implementando o tema escuro ao portifólio

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             ></a>
           </li>
           <li>
-            <a href="#" id="botao-tema"><i class="fa-solid fa-moon"></i></a>
+            <a href="#" class="link" id="botao-tema"
+              ><i class="fa-solid fa-moon"></i
+            ></a>
           </li>
         </ul>
       </nav>
