Adicionando meus certificados e alguns projetos.

--- a/index.html
+++ b/index.html
@@ -192,6 +192,58 @@
               </h3>
               <p class="titulacao">Técnico em Desenvolvimento de Sistemas</p>
             </div>
+            <div class="curso">
+              <p class="periodo">2018 a 2019</p>
+              <h3 class="instituicao">Instituto Conceição Moura</h3>
+              <p class="titulacao">
+                Curso de Multiplicadores do projeto de robótica Território do
+                Fazer.
+              </p>
+              <details class="descricao">
+                <summary><strong>Certificado</strong></summary>
+                <img
+                  src="certificados/robo-livre.png"
+                  alt="certificado"
+                  class="fotos"
+                />
+              </details>
+            </div>
+            <div class="curso">
+              <p class="periodo">abril a dezembro de 2021</p>
+              <h3 class="instituicao">Instituto Conceição Moura</h3>
+              <p class="titulacao">
+                Monitor Voluntária no projeto de robótica educacional Território
+                do Fazer
+              </p>
+              <details class="descricao">
+                <summary><strong>Certificado</strong></summary>
+                <img
+                  src="certificados/monitor-instituto.png"
+                  alt="certificado"
+                  class="fotos"
+                />
+              </details>
+            </div>
+            <div class="curso" id="curso-certificado">
+              <p class="periodo">27 de setembro de 2025</p>
+              <h3 class="instituicao">Curso em Video</h3>
+              <p class="titulacao">JAVASCRIPT [40 HORAS]</p>
+              <details class="descricao">
+                <summary><strong>Certificado</strong></summary>
+                <img
+                  src="certificados/certificado_de_javaScript-imagem.jpg"
+                  alt="certificado"
+                  class="fotos"
+                />
+              </details>
+            </div>
+            <div class="curso">
+              <p class="periodo">Cursando</p>
+              <h3 class="instituicao">
+                Estácio Belo Jardim - Curso Superior de Tecnologia
+              </h3>
+              <p class="titulacao">Ciência da Computação</p>
+            </div>
           </div>
         </article>
         <!-- Fim formação -->
@@ -203,8 +255,8 @@
             <div class="projeto">
               <img src="imagens/projeto-03-android.jpg" alt="" class="foto" />
               <div class="projeto-info">
-                <p class="periodo"></p>
-                <h3 class="titulo"></h3>
+                <p class="periodo">2024</p>
+                <h3 class="titulo">Projeto Android</h3>
                 <p></p>
                 <details class="descricao">
                   <summary>Saiba mais...</summary>
@@ -213,6 +265,60 @@
                     design personalizado via CSS e organização modular. Inclui
                     automação de deploy com GitHub Actions e foco em navegação
                     simples e visual atrativo.
+                  </p>
+                </details>
+              </div>
+            </div>
+            <div class="projeto">
+              <img src="imagens/projeto-02-cordel.jpg" alt="" class="foto" />
+              <div class="projeto-info">
+                <p class="periodo">2025</p>
+                <h3 class="titulo">Projeto Cordel</h3>
+                <p></p>
+                <details class="descricao">
+                  <summary>Saiba mais...</summary>
+                  <p>
+                    É uma página web que homenageia a cultura nordestina através
+                    da estética da literatura de cordel. Utilizando HTML e CSS
+                    puros, o site apresenta um layout vertical com tipografia
+                    marcante, fundo texturizado e imagens em preto e branco que
+                    remetem aos tradicionais xilogravuras.
+                  </p>
+                </details>
+              </div>
+            </div>
+            <div class="projeto">
+              <img src="imagens/projeto-04-links.jpg" alt="" class="foto" />
+              <div class="projeto-info">
+                <p class="periodo">2025</p>
+                <h3 class="titulo">Projeto-Redes-Socias</h3>
+                <p></p>
+                <details class="descricao">
+                  <summary>Saiba mais...</summary>
+                  <p>
+                    Desenvolvido com foco em praticidade e organização, este
+                    projeto apresenta uma interface limpa onde o usuário pode
+                    acessar rapidamente os perfis sociais do autor. Utilizando
+                    HTML e CSS, o site inclui ícones personalizados, imagens e
+                    um favicon para reforçar a identidade visual. É ideal para
+                    quem deseja criar uma vitrine digital pessoal ou um cartão
+                    de visita online.
+                  </p>
+                </details>
+              </div>
+            </div>
+            <div class="projeto">
+              <img src="imagens/projeto-05-login.jpg" alt="" class="foto" />
+              <div class="projeto-info">
+                <p class="periodo">2025</p>
+                <h3 class="titulo">Projeto-Tela-Login</h3>
+                <p></p>
+                <details class="descricao">
+                  <summary>Saiba mais...</summary>
+                  <p>
+                    O projeto "Tela de Login" é uma interface simples e elegante
+                    desenvolvida com HTML e CSS, ideal para treinar conceitos
+                    básicos de front-end.
                   </p>
                 </details>
               </div>
