colocando a apresentação no portifólio.
Retirei o vídeo e coloquei o texto de apresentação.

--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@
         </div>
       </section>
       <section id="detalhes">
-        <article id="video">
+        <article id="apresentacao">
           <h2><i class="fa-solid fa-handshake"></i> Deixe-me apresentar</h2>
-          <div class="video-conteiner">
-            <iframe
-              width="560"
-              height="315"
-              src="https://www.youtube.com/embed/lE1XZsA9Yto?si=7XoXraPg9-e_UqCA"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-              referrerpolicy="strict-origin-when-cross-origin"
-              allowfullscreen
-            ></iframe>
-          </div>
+          <div class="video-conteiner"></div>
+          <h4>Olá! Seja bem-vindo ao meu portfólio 👋</h4>
+          <p>
+            Sou apaixonado por tecnologia e desenvolvimento de sistemas. Ao
+            longo da minha trajetória, venho construindo soluções digitais com
+            foco em funcionalidade, desempenho e experiência do usuário. Tenho
+            dedicação constante ao aprendizado e à evolução profissional,
+            buscando sempre aprimorar minhas habilidades técnicas e acompanhar
+            as tendências do setor. Este espaço foi criado para compartilhar um
+            pouco da minha jornada, meus conhecimentos e minha paixão por criar
+            soluções que fazem a diferença.
+          </p>
         </article>
         <!-- Fim do video -->
         <article id="skills">
