--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anthony - Portfólio</title>
-    <link rel="stylesheet" href="/estilo/style.css" />
+    <link rel="stylesheet" href="estilo/style.css" />
     <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon" />
     <script
       src="https://kit.fontawesome.com/dc4cba2d22.js"
