adicionando a seção experiências ao portifólio

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             ></a>
           </li>
           <li>
+            <a href="#esperiencias" class="link"
+              ><i class="fa-solid fa-briefcase"></i
+            ></a>
+          <li>
             <a href="#projetos" class="link"
               ><i class="fa-solid fa-trowel-bricks"></i
             ></a>
@@ -208,22 +212,6 @@
                 />
               </details>
             </div>
-            <div class="curso">
-              <p class="periodo">abril a dezembro de 2021</p>
-              <h3 class="instituicao">Instituto Conceição Moura</h3>
-              <p class="titulacao">
-                Monitor Voluntária no projeto de robótica educacional Território
-                do Fazer
-              </p>
-              <details class="descricao">
-                <summary><strong>Certificado</strong></summary>
-                <img
-                  src="certificados/monitor-instituto.png"
-                  alt="certificado"
-                  class="fotos"
-                />
-              </details>
-            </div>
             <div class="curso" id="curso-certificado">
               <p class="periodo">27 de setembro de 2025</p>
               <h3 class="instituicao">Curso em Video</h3>
@@ -247,6 +235,24 @@
           </div>
         </article>
         <!-- Fim formação -->
+         <article id="esperiencias">
+          <h2><i class="fa-solid fa-briefcase"></i> Experiências Profissionais</h2>
+          <div id="experiencias-conteiner">
+            <div class="experiencia">
+              <p class="periodo">2021 - 2022</p>
+              <h3 class="cargo">Monitor Voluntário de Robótica Educacional</h3>
+              <h4 class="empresa">Instituto Conceição Moura</h4>
+              <details class="descricao">
+                <summary><strong>Certificado</strong></summary>
+                <img
+                  src="certificados/monitor-instituto.png"
+                  alt="certificado"
+                  class="fotos"
+                />
+              </details>
+            </div>
+         </article>
+         <!-- Fim experiências -->
         <article id="projetos">
           <h2>
             <i class="fa-solid fa-trowel-bricks"></i> Projetos Desenvolvidos
