adicionando link de acesso aos projetos.

--- a/index.html
+++ b/index.html
@@ -262,8 +262,7 @@
               <img src="imagens/projeto-03-android.jpg" alt="" class="foto" />
               <div class="projeto-info">
                 <p class="periodo">2024</p>
-                <h3 class="titulo">Projeto Android</h3>
-                <p></p>
+                <h3 class="titulo"><a href="https://github.com/Anthony-Albuquerque405/projeto_android" target="_blank">Projeto Android</a></h3>
                 <details class="descricao">
                   <summary>Saiba mais...</summary>
                   <p>
@@ -279,8 +278,7 @@
               <img src="imagens/projeto-02-cordel.jpg" alt="" class="foto" />
               <div class="projeto-info">
                 <p class="periodo">2025</p>
-                <h3 class="titulo">Projeto Cordel</h3>
-                <p></p>
+                <h3 class="titulo"><a href="https://github.com/Anthony-Albuquerque405/projeto-cordel" target="_blank">Projeto Cordel</a></h3>
                 <details class="descricao">
                   <summary>Saiba mais...</summary>
                   <p>
@@ -297,8 +295,7 @@
               <img src="imagens/projeto-04-links.jpg" alt="" class="foto" />
               <div class="projeto-info">
                 <p class="periodo">2025</p>
-                <h3 class="titulo">Projeto-Redes-Socias</h3>
-                <p></p>
+                <h3 class="titulo"><a href="https://github.com/Anthony-Albuquerque405/projeto_redes_sociais" target="_blank">Projeto-Redes-Socias</a></h3>
                 <details class="descricao">
                   <summary>Saiba mais...</summary>
                   <p>
@@ -317,8 +314,7 @@
               <img src="imagens/projeto-05-login.jpg" alt="" class="foto" />
               <div class="projeto-info">
                 <p class="periodo">2025</p>
-                <h3 class="titulo">Projeto-Tela-Login</h3>
-                <p></p>
+                <h3 class="titulo"><a href="https://github.com/Anthony-Albuquerque405/projeto-tela-de-login?tab=readme-ov-file" target="_blank">Projeto-Tela-Login</a></h3>
                 <details class="descricao">
                   <summary>Saiba mais...</summary>
                   <p>
