--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav id="menu">
         <ul>
           <li>
-            <a href="#video" class="link"><i class="fa-solid fa-house"></i></a>
+            <a href="#apresentacao" class="link"><i class="fa-solid fa-house"></i></a>
           </li>
           <li>
             <a href="#skills" class="link"><i class="fa-solid fa-brain"></i></a>
