Add JavaScript fundamentals certificate to profile
Added certificado-javascript..jpg to the certificados directory and updated index.html to display a new course entry for 'Fundamentos do JavaScript' from Balta.io, including certificate details and image.

--- a/index.html
+++ b/index.html
@@ -232,6 +232,21 @@
               </h3>
               <p class="titulacao">Ciência da Computação</p>
             </div>
+            <div class="curso">
+              <p class="periodo">16/11/2025 a 22/11/2025</p>
+              <h3 class="instituicao">Balta.io</h3>
+              <p class="titulacao">
+                Fundamentos do JavaScript               
+              </p>
+              <details class="descricao">
+                <summary><strong>Certificado</strong></summary>
+                <img
+                  src="certificados/certificado-javascript..jpg"
+                  alt="certificado"
+                  class="fotos"
+                />
+              </details>
+            </div>
           </div>
         </article>
         <!-- Fim formação -->
