--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             soluções que fazem a diferença.
           </p>
         </article>
-        <!-- Fim do video -->
+        <!-- Fim do apresentação -->
         <article id="skills">
           <h2><i class="fa-solid fa-brain"></i> Minhas Skills</h2>
           <div id="skills-conteiner">
@@ -110,10 +110,10 @@
             <div class="item">
               <div class="info">
                 <span class="nome"><i class="fa-solid fa-code"></i> CSS3 </span>
-                <span class="porcent"> 92% </span>
+                <span class="porcent"> 90% </span>
               </div>
               <div class="barra">
-                <div class="progresso" style="width: 92%"></div>
+                <div class="progresso" style="width: 90%"></div>
               </div>
             </div>
             <div class="item">
@@ -154,10 +154,10 @@
                 <span class="nome"
                   ><i class="fa-solid fa-person-rays"></i> Trabalho em Equipe
                 </span>
-                <span class="porcent"> 98% </span>
+                <span class="porcent"> 90% </span>
               </div>
               <div class="barra">
-                <div class="progresso" style="width: 98%"></div>
+                <div class="progresso" style="width: 90%"></div>
               </div>
             </div>
             <div class="item">
@@ -176,10 +176,10 @@
                 <span class="nome"
                   ><i class="fa-solid fa-person-rays"></i> Liderança
                 </span>
-                <span class="porcent"> 85% </span>
+                <span class="porcent"> 80% </span>
               </div>
               <div class="barra">
-                <div class="progresso" style="width: 85%"></div>
+                <div class="progresso" style="width: 80%"></div>
               </div>
             </div>
           </div>
